--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -76,6 +76,12 @@
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\ShowDetailFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\ShowDetailFrm.Designer.cs">
+      <DependentUpon>ShowDetailFrm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="UI\DtlFrm.resx">
       <DependentUpon>DtlFrm.cs</DependentUpon>
     </EmbeddedResource>
@@ -94,6 +100,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\ShowDetailFrm.resx">
+      <DependentUpon>ShowDetailFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="bin\Debug\BomOfferOrder.exe.config" />
     <None Include="bin\Debug\BomOfferOrder.vshost.exe.config" />
     <None Include="bin\Debug\BomOfferOrder.vshost.exe.manifest" />
