--- a/BomOfferOrder/App.config
+++ b/BomOfferOrder/App.config
@@ -10,8 +10,8 @@
     <add name="Connstring"
          providerName="System.Data.SqlClient"
          connectionString="Data Source='192.168.1.228';Initial Catalog='AIS20181204095717';Persist Security Info=True;User ID='sa'; Password='kingdee';Pooling=true;Max Pool Size=40000;Min Pool Size=0" />
-    <!--<add name="Connstring1"
+    <add name="ConnstringBom"
          providerName="System.Data.SqlClient"
-         connectionString="Data Source='192.168.1.228';Initial Catalog='AIS20181204095717';Persist Security Info=True;User ID='sa'; Password='kingdee';Pooling=true;Max Pool Size=40000;Min Pool Size=0" />-->
+         connectionString="Data Source='192.168.1.228';Initial Catalog='BomOffer';Persist Security Info=True;User ID='sa'; Password='kingdee';Pooling=true;Max Pool Size=40000;Min Pool Size=0" />
   </connectionStrings>
 </configuration>
