--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -50,8 +50,9 @@
     <Compile Include="Conn.cs" />
     <Compile Include="DB\DbList.cs" />
     <Compile Include="DB\SqlList.cs" />
-    <Compile Include="Task\GenerateDb.cs" />
-    <Compile Include="Task\SearchDb.cs" />
+    <Compile Include="Task\GenerateDt.cs" />
+    <Compile Include="Task\ImportDt.cs" />
+    <Compile Include="Task\SearchDt.cs" />
     <Compile Include="Task\TaskLogic.cs" />
     <Compile Include="UI\DtlFrm.cs">
       <SubType>Form</SubType>
@@ -65,6 +66,12 @@
     <Compile Include="UI\Load.Designer.cs">
       <DependentUpon>Load.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +83,12 @@
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\SearchFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\SearchFrm.Designer.cs">
+      <DependentUpon>SearchFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\ShowDetailFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +121,9 @@
     </Compile>
     <EmbeddedResource Include="UI\ShowDetailFrm.resx">
       <DependentUpon>ShowDetailFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\ShowMaterialDetailFrm.resx">
+      <DependentUpon>ShowMaterialDetailFrm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="bin\Debug\BomOfferOrder.exe.config" />
     <None Include="bin\Debug\BomOfferOrder.vshost.exe.config" />
