20190916:增加物料明细相关代码-添加及替换

--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -119,6 +119,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\SearchFrm.resx">
+      <DependentUpon>SearchFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\ShowDetailFrm.resx">
       <DependentUpon>ShowDetailFrm.cs</DependentUpon>
     </EmbeddedResource>
