20190917:1)完成添加‘单价’到GridView内 2)判断获取过来的物料ID若已存在,就跳过不插入新行 3)修改Conn类

--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -151,6 +151,7 @@
     <Content Include="obj\Debug\BomOfferOrder.csproj.FileListAbsolute.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="bin\Debug\PIC\" />
     <Folder Include="bin\Release\" />
     <Folder Include="DLL\" />
     <Folder Include="obj\Debug\TempPE\" />
