--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -72,17 +72,23 @@
     <Compile Include="UI\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Main.cs">
+    <Compile Include="UI\CreateFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Main.Designer.cs">
-      <DependentUpon>Main.cs</DependentUpon>
+    <Compile Include="UI\CreateFrm.Designer.cs">
+      <DependentUpon>CreateFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\PermissionFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\PermissionFrm.Designer.cs">
+      <DependentUpon>PermissionFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\SearchFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,8 +113,8 @@
     <EmbeddedResource Include="UI\Load.resx">
       <DependentUpon>Load.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Main.resx">
-      <DependentUpon>Main.cs</DependentUpon>
+    <EmbeddedResource Include="UI\CreateFrm.resx">
+      <DependentUpon>CreateFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
