20190919:1)添加填写明细行的异常处理 2)添加权限控制 3)添加‘审核’图标 4)提交代码初建立

--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -154,10 +154,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\BomOfferOrder.vshost.exe" />
+    <Content Include="bin\Debug\PIC\1.png" />
     <Content Include="obj\Debug\BomOfferOrder.csproj.FileListAbsolute.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="bin\Debug\PIC\" />
     <Folder Include="bin\Release\" />
     <Folder Include="DLL\" />
     <Folder Include="obj\Debug\TempPE\" />
