--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="UI\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -169,6 +170,8 @@
     <Content Include="bin\Debug\BomOfferOrder.vshost.exe" />
     <Content Include="bin\Debug\PIC\1.png" />
     <Content Include="obj\Debug\BomOfferOrder.csproj.FileListAbsolute.txt" />
+    <None Include="Resources\create.png" />
+    <None Include="Resources\Search.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\Release\" />
