20190924:1)添加查询SQL(供主窗体及查询窗体使用) 2)添加右键菜单及相关代码 3)读取时与DtlFrm.cs关联 4)添加‘修改密码’窗体 5)修正查询界面

--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Task\ImportDt.cs" />
     <Compile Include="Task\SearchDt.cs" />
     <Compile Include="Task\TaskLogic.cs" />
+    <Compile Include="UI\ChangeAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\ChangeAccount.Designer.cs">
+      <DependentUpon>ChangeAccount.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\DtlFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +120,9 @@
     <Compile Include="UI\ShowMaterialDetailFrm.Designer.cs">
       <DependentUpon>ShowMaterialDetailFrm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\ChangeAccount.resx">
+      <DependentUpon>ChangeAccount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\DtlFrm.resx">
       <DependentUpon>DtlFrm.cs</DependentUpon>
     </EmbeddedResource>
