--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -51,6 +51,11 @@
     <Compile Include="DB\DbList.cs" />
     <Compile Include="DB\SqlList.cs" />
     <Compile Include="GlobalClasscs.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Task\GenerateDt.cs" />
     <Compile Include="Task\ImportDt.cs" />
     <Compile Include="Task\SearchDt.cs" />
@@ -155,14 +160,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="UI\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -199,7 +199,12 @@
   <ItemGroup>
     <Content Include="bin\Debug\BomOfferOrder.vshost.exe" />
     <Content Include="bin\Debug\PIC\1.png" />
+    <Content Include="bin\Debug\PIC\2.png" />
+    <Content Include="bin\Debug\PIC\create.png" />
+    <Content Include="bin\Debug\PIC\LOGO.ICO" />
+    <Content Include="bin\Debug\PIC\Search.png" />
     <Content Include="obj\Debug\BomOfferOrder.csproj.FileListAbsolute.txt" />
+    <None Include="Resources\Logo.ico" />
     <None Include="Resources\create.png" />
     <None Include="Resources\Search.png" />
   </ItemGroup>
