--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -33,6 +33,54 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Stimulsoft.Base, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Base.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Controls, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Controls.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Controls.Win, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Controls.Win.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Database, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Database.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Design, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Editor, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Report, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Report.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Report.Check, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Report.Check.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Report.Design, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Report.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Report.Helper, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Report.Helper.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Report.Web, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Report.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="Stimulsoft.Report.Win, Version=2018.1.2.0, Culture=neutral, PublicKeyToken=ebe6666cba19647a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\Stimulsoft.Report.Win.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -125,6 +173,12 @@
     <Compile Include="UI\Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\ReportFrm\MaterialReportFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\ReportFrm\MaterialReportFrm.Designer.cs">
+      <DependentUpon>MaterialReportFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\SearchFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -178,6 +232,9 @@
     <EmbeddedResource Include="UI\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\ReportFrm\MaterialReportFrm.resx">
+      <DependentUpon>MaterialReportFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\SearchFrm.resx">
       <DependentUpon>SearchFrm.cs</DependentUpon>
     </EmbeddedResource>
@@ -212,15 +269,28 @@
     <Content Include="bin\Debug\PIC\create.png" />
     <Content Include="bin\Debug\PIC\LOGO.ICO" />
     <Content Include="bin\Debug\PIC\Search.png" />
+    <Content Include="DLL\Stimulsoft.Base.dll" />
+    <Content Include="DLL\Stimulsoft.Controls.dll" />
+    <Content Include="DLL\Stimulsoft.Controls.Win.dll" />
+    <Content Include="DLL\Stimulsoft.Database.dll" />
+    <Content Include="DLL\Stimulsoft.Design.dll" />
+    <Content Include="DLL\Stimulsoft.Editor.dll" />
+    <Content Include="DLL\Stimulsoft.Report.Check.dll" />
+    <Content Include="DLL\Stimulsoft.Report.Design.dll" />
+    <Content Include="DLL\Stimulsoft.Report.dll" />
+    <Content Include="DLL\Stimulsoft.Report.Helper.dll" />
+    <Content Include="DLL\Stimulsoft.Report.Web.dll" />
+    <Content Include="DLL\Stimulsoft.Report.Win.dll" />
     <Content Include="obj\Debug\BomOfferOrder.csproj.FileListAbsolute.txt" />
     <None Include="Resources\Logo.ico" />
     <None Include="Resources\create.png" />
     <None Include="Resources\Search.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="bin\Debug\Report\" />
     <Folder Include="bin\Release\" />
-    <Folder Include="DLL\" />
     <Folder Include="obj\Debug\TempPE\" />
+    <Folder Include="STI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
