20191225:1)修改‘物料明细窗体’SQL,现在的物料分组为:'原漆半成品','原材料','原漆' 2)修正MAIN窗体图片按钮添加文字说明 3)修正‘Custinfofrm.cs’及'SearchFrm.cs'相关跳转页代码 4)对导入物料EXCEL添加LOAD进程

--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -314,9 +314,14 @@
     <Content Include="DLL\Stimulsoft.Report.Win.dll" />
     <Content Include="Logo.ico" />
     <Content Include="obj\Debug\BomOfferOrder.csproj.FileListAbsolute.txt" />
+    <None Include="Resources\Report.png" />
+    <None Include="Resources\OrderNewCreate.png" />
+    <None Include="Resources\OrderEmpty.png" />
+    <None Include="Resources\OrderCreate.png" />
+    <None Include="Resources\Search.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\Logo.ico" />
-    <None Include="Resources\create.png" />
-    <None Include="Resources\Search.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\Release\" />
