20200214:1)增加新STI报表模板 2)修改报表使用的物料相关SQL

--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -284,6 +284,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="STI\MaterialCostReport.mrt" />
+    <None Include="STI\MaterialProfitReport.mrt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
