20200218:将报表相关代码完成,

--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -272,6 +272,7 @@
     <None Include="bin\Debug\BomOfferOrder.vshost.exe.config" />
     <None Include="bin\Debug\BomOfferOrder.vshost.exe.manifest" />
     <None Include="bin\Debug\Report\MaterialCostReport.mrt" />
+    <None Include="bin\Debug\Report\MaterialProfitReport.mrt" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="Properties\Settings.settings">
