20200417:基础资 料-用户组别功能初始添加

--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -151,6 +151,12 @@
     <Compile Include="UI\Admin\Basic\BDUserGroupFrm.Designer.cs">
       <DependentUpon>BDUserGroupFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Admin\Basic\UserInfoList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Admin\Basic\UserInfoList.Designer.cs">
+      <DependentUpon>UserInfoList.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Admin\GetAccountFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -242,6 +248,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Admin\Basic\BDUserGroupFrm.resx">
       <DependentUpon>BDUserGroupFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Admin\Basic\UserInfoList.resx">
+      <DependentUpon>UserInfoList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Admin\GetAccountFrm.resx">
       <DependentUpon>GetAccountFrm.cs</DependentUpon>
