--- a/BomOfferOrder/BomOfferOrder.csproj
+++ b/BomOfferOrder/BomOfferOrder.csproj
@@ -128,6 +128,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Task\DeletDt.cs" />
     <Compile Include="Task\GenerateDt.cs" />
     <Compile Include="Task\ImportDt.cs" />
     <Compile Include="Task\ImportPerDt.cs" />
